# neampmod-the-tweed

./: .dockerignore  .gitignore  BINARY_LICENSE  CLA.md  CONTRIBUTING.md  CREDITS.md  Cargo.toml  Dockerfile  LICENSE.md  README.md  build.rs  build.sh  docker-compose.yml
.cargo/: config.toml
.github/workflows/: build.yml
src/: gui.rs  lib.rs  main.rs
tests/: ir_load_state.rs  plugin_smoke.rs  v1_shared_cathode.rs  v2a_grid_network.rs  v2a_grid_tone_shunt.rs
xtask/: Cargo.toml
